<resources>
    <string name="app_name">fitness</string>
    <string name="slogan">Track your weight , activity , water and food calories to meet your fitness goal</string>
    <string name="HpgSignup">Sign Up</string>
    <string name="HpgLogin">Log In</string>
    <string name="appName">Get Fit</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_me">Me</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_water">activity_water</string>
    <string name="water_intake">Water Intake</string>
    <string name="glasses_consumed">glasses consumed</string>
    <string name="reminder_ellipsis">reminder_ellipsis</string>
    <string name="water_reminder_toolText">Water Reminder</string>


</resources>
