<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scaleType="centerCrop"
    android:orientation="vertical"
    tools:context="com.example.orangerabbit.fitness.MainActivity">


    <LinearLayout

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:background="@drawable/getfit"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginTop="100dp"
            android:shadowColor="#a9a9a9"
            android:shadowDx="2"
            android:shadowRadius="2"
            android:text="@string/appName"
            android:textColor="@android:color/holo_red_light"
            android:textSize="60sp"
            android:textStyle="bold|italic"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/shadow"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@android:color/white" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/HpgSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shadow"
            android:text="@string/HpgSignup"
            android:textColor="@android:color/holo_green_dark" />

        <Button
            android:id="@+id/HpgLogInButton"
            android:layout_width="wrap_content"
            android:background="@drawable/shadow"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/HpgLogin"
            android:textColor="@android:color/holo_green_dark" />

    </LinearLayout>

</RelativeLayout>
